--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+@import '~normalize.css';
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    height: 100%;
+    font-family: 'Roboto', serif;
+}
+
+div#root {
+    width: 100%;
+    height: 100%;
 }
